Regression: Sculpt: Expand Face Set By Topology broken in Blender 4.1, 4.2 and 4.3 #123335

Closed
opened 2024-06-17 22:41:22 +02:00 by Lucas · 5 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 555.99

Blender Version
Broken: version: 4.3.0 Alpha, branch: main, commit date: 2024-06-12 20:45, hash: ad3c92b6601a
Worked: 4.0
Short description of error
Expand Face Set By Topology (Shift W) broken in Blender 4.1, 4.2 and 4.3
If you fill the whole object with a face set it works as expected but as soon as you clear the face set (from the Face Sets menu select
Face Set from Visible) it breaks again. The face Set will not contract, only expand as I move the mouse and pressing E will create a rainbow.
Watch provided video.
Exact steps for others to reproduce the error

  1. Add a Sphere.
  2. Go into sculpt mode.
  3. Press Shift W on the mesh and move the cursor.
  4. Press E to create an unexpected rainbow pattern.
  5. Press Shift W again and fill the whole mesh with one face set.
  6. Press shift W again and move the mouse(everything should work).
  7. Press alt W and select Face Set from visible.
  8. Press Shift W again and notice that it's broken again.
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 555.99 **Blender Version** Broken: version: 4.3.0 Alpha, branch: main, commit date: 2024-06-12 20:45, hash: `ad3c92b6601a` Worked: 4.0 **Short description of error** Expand Face Set By Topology (Shift W) broken in Blender 4.1, 4.2 and 4.3 If you fill the whole object with a face set it works as expected but as soon as you clear the face set (from the Face Sets menu select Face Set from Visible) it breaks again. The face Set will not contract, only expand as I move the mouse and pressing E will create a rainbow. Watch provided video. **Exact steps for others to reproduce the error** 1. Add a Sphere. 2. Go into sculpt mode. 3. Press Shift W on the mesh and move the cursor. 4. Press E to create an unexpected rainbow pattern. 5. Press Shift W again and fill the whole mesh with one face set. 6. Press shift W again and move the mouse(everything should work). 7. Press alt W and select Face Set from visible. 8. Press Shift W again and notice that it's broken again.
Lucas added the
Type
Report
Severity
Normal
Status
Needs Triage
labels 2024-06-17 22:41:23 +02:00
Iliya Katushenock added the
Interest
Sculpt, Paint & Texture
label 2024-06-17 22:50:05 +02:00
Member

Hi, thanks for the report. Can confirm

Hi, thanks for the report. Can confirm
Member

Broke between 27992034f2e6 - fb5d03b5baae

Broke between `27992034f2e6 - fb5d03b5baae`
Member

I’ll take a look into this today

I’ll take a look into this today
Sean Kim self-assigned this 2024-06-18 16:08:46 +02:00
Member

So, as far as I can see, the two issues here are:

  1. The face set doesn't shrink
  2. Pressing E after Shift-W doesn't toggle the color, instead it causes a weird rainbow pattern of face sets

Both of these only happen when there is no face set attribute on the mesh

So, as far as I can see, the two issues here are: 1. The face set doesn't shrink 2. Pressing E after Shift-W doesn't toggle the color, instead it causes a weird rainbow pattern of face sets Both of these only happen when there is no face set attribute on the mesh
Member

Will have a fix for this soon, fairly sure this issue is caused by f3dd1a3260

Will have a fix for this soon, fairly sure this issue is caused by https://projects.blender.org/blender/blender/commit/f3dd1a326099e711ba1805e499f8d446aec5abf8
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-06-18 21:03:47 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#123335
No description provided.